fix(ui): MarkdownEditor / line numbers are incorrect when there are wrapped lines in a code block

--- a/cotoami_desktop/ui/assets/css/components/_MarkdownEditor.scss
+++ b/cotoami_desktop/ui/assets/css/components/_MarkdownEditor.scss
@@ -135,11 +135,8 @@
   }
 
   .code-block-text {
-    font-size: 0.875em;
-    font-family: var(--font-family);
     background: var(--code-background-color);
     color: var(--code-color);
-    font-weight: var(--font-weight);
   }
 
   .bold {
